# falling-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/include/: json.hpp
engine/include/core/: application.h
engine/include/engine/asset-management/: asset_manager.h  asset_structures.h  texture_importer.h
engine/include/engine/assetManagement/: meshLoader.h  modelLoader.h  shaderLoader.h  textureLoader.h
engine/include/engine/assets/: asset_data.h  asset_handle.h  asset_helpers.h  asset_importer_service.h  asset_manager.h  asset_metadata_service.h  asset_structures.h  asset_warehouse_service.h  image_importer.h  material_importer.h  model_importer.h  shader_importer.h  texture_importer.h
engine/include/engine/assets/assetLoaders/: meshLoader.h  modelLoader.h  textureLoader.h
engine/include/engine/assets/importers/: image_importer.h  model_importer.h  shader_importer.h
engine/include/engine/assets/metadata/: asset_metadata_service.h
engine/include/engine/assets/warehouse/: asset_warehouse_service.h
engine/include/engine/core/: application.h
engine/include/engine/serialization/: archive.h  asset_metadata_serializer.h  asset_uuid_serializer.h  jsonarchive.h  serialization_helpers.h  serializer.h
engine/include/engine/utils/: uuid.h
engine/src/asset-management/: asset_manager.cpp  texture_importer.cpp
engine/src/assetManagement/: shaderLoader.cpp  textureLoader.cpp
engine/src/assets/: asset_importer_service.cpp  asset_manager.cpp  asset_metadata_service.cpp  asset_warehouse_service.cpp  image_importer.cpp  material_importer.cpp  model_importer.cpp  shader_importer.cpp  texture_importer.cpp
engine/src/assets/importers/: image_importer.cpp  model_importer.cpp  shader_importer.cpp
engine/src/assets/metadata/: asset_metadata_service.cpp
engine/src/assets/warehouse/: asset_warehouse_service.cpp
engine/src/core/: application.cpp
engine/src/serialization/: asset_metadata_serializer.cpp  asset_uuid_serializer.cpp  jsonarchive.cpp  serialization_helpers.cpp
engine/src/utils/: uuid.cpp
game/: CMakeLists.txt  main.cpp
game/assets/: lookalike_crop.jpg.fmeta
game/assets/models/: ryujin7.glb  ryujin7.glb.fmeta
game/assets/secret_img/: lookalike_crop.jpg.fid  lookalike_crop.jpg.fmeta  (+2 more)
game/include/: asset_ids.h
tools/: CMakeLists.txt
tools/asset_headers/: generator.cpp  generator.h  main.cpp
(+9 files in other folders)
